Added GET string to stylesheet to prevent unnecessary caching (eventually will be autogenerated based on file's mtime)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -154,6 +154,9 @@ nav a:hover {
    Author's custom styles
    ========================================================================== */
 
+body.full-height {
+    overflow: hidden;
+}
 
 .full-height > .header-container {
     height: 76px;
