--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -12,7 +12,7 @@
         <link rel="apple-touch-icon" href="static/images/apple-touch-icon.png">
 
         <link rel="stylesheet" href="static/css/normalize.min.css">
-        <link rel="stylesheet" href="static/css/main.css">
+        <link rel="stylesheet" href="static/css/main.css?1476669660">
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
