--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -29,7 +29,7 @@
 
         <div class="main-container">
             <div class="main wrapper clearfix">
-                <article>
+                <article class="note">
                    <p>Sample note text.</p>
                    <p>Bacon ipsum dolor amet incididunt irure veniam tenderloin. Kielbasa ham hock tail adipisicing pastrami. Nisi aute enim salami incididunt cupim. Commodo landjaeger beef ribs turducken magna ea, pastrami ut jerky pariatur corned beef nisi. Pork belly boudin flank short ribs, leberkas strip steak turkey spare ribs laboris dolor cillum. Kevin veniam irure laborum flank ham hock dolore ribeye deserunt venison bresaola boudin capicola ut duis. Frankfurter ad nulla, labore flank anim capicola nisi.</p>
                 </article>
