Fixing CharFields which were missing required argument max_length, added submit button to note-test page form

--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -40,6 +40,7 @@
             <footer class="wrapper">
                 <form method="post" action="">
                     {{ formset }}
+                    <input type="submit" value="Post">
                 </form>
             </footer>
         </div>
