--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -44,7 +44,7 @@
             <footer class="wrapper">
                 <form method="post" action="">
                     {% csrf_token %}
-                    {{ formset }}
+                    {{ form }}
                     <input type="submit" value="Post">
                 </form>
             </footer>
