--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,18 @@
         <link rel="stylesheet" href="static/css/normalize.min.css">
         <link rel="stylesheet" href="static/css/main.css">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="static/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+        
         <div class="header-container">
             <header class="wrapper clearfix">
+
+                <p><img src="static/images/Slam%20eNotes%20Logo.png" alt="Slam eNotes Logo"  height="450" width="325"> </p>
+
                 <h1 class="title">h1.title</h1>
                 <nav>
                     <ul>
@@ -39,6 +42,8 @@
 
                 <article>
                     <header>
+                        
+                        
                         <h1>article header h1</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
                     </header>
