--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,9 @@
 
                 <p><img src="static/images/Slam%20eNotes%20Logo.png" alt="Slam eNotes Logo"  height="450" width="325"> </p>
 
-                <h1 class="title">h1.title</h1>
+                <!<h1 class="title">h1.title</h1>>
                 <nav>
                     <ul>
-                        <li><a href="#">nav ul li a</a></li>
                         <li><a href="#">nav ul li a</a></li>
                         <li><a href="#">nav ul li a</a></li>
                     </ul>
@@ -55,16 +54,9 @@
                         <h2>About Us</h2>
                         <p>Rawr...</p>
                     </section>
-                    <footer>
-                        <h3>article footer h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-                    </footer>
+
                 </article>
 
-                <aside>
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-                </aside>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
