--- a/templates/index.html
+++ b/templates/index.html
@@ -26,11 +26,10 @@
 
                 <p><img src="static/images/Slam%20eNotes%20Logo.png" alt="Slam eNotes Logo"  height="450" width="325"> </p>
 
-                <!<h1 class="title">h1.title</h1>>
                 <nav>
                     <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </header>
