added flavor to about Slam eNotes

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,8 @@
 
                 <nav>
                     <ul>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -47,7 +47,7 @@
                     </header>
                     <section>
                         <h2>About Slam eNotes - what it is</h2>
-                        <p> What Slam eNotes does. Description of program.</p>
+                        <p> We propose creating a web application that allows users to create a channel with which to compile and share their notes for a particular class/lecture. Users will create accounts and submit a class schedule, from which they will be able to either search for lectures to join, or create their own lecture channel. Within the lecture channels users can post notes from a particular day's lecture, which will be indexed by the date/section. Users can also comment on and rate the contributions of other users within the channel to find the most relevant notes. There will also be a channel wide live chat allowing users to communicate in real time. User creations will be indexed based on their tags allowing users to search the channel for a particular subject/topic</p>
                     </section>
                     <section>
                         <h2>About Us</h2>
