deleted contact link and added link to submit a note

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,8 @@
 
                 <nav>
                     <ul>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="/note-test">Submit a note</a></li>
+
                     </ul>
                 </nav>
             </header>
