--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -13,7 +13,7 @@
         <link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
 
         <link rel="stylesheet" href="{% static 'css/normalize.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/main.css?1476680402' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}?1476680402">
 
         <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
     </head>
