--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,18 +70,18 @@ body {
    =================== */
 
 .header-container {
-    border-bottom: 20px solid #e44d26;
+    border-bottom: 20px solid #e1e1e1;
 }
 
 .footer-container,
 .main aside {
-    border-top: 20px solid #e44d26;
+    border-top: 20px solid #e1e1e1;
 }
 
 .header-container,
 .footer-container,
 .main aside {
-    background: #f16529;
+    background: #f2f2f2;
 }
 
 .title {
@@ -108,7 +108,7 @@ nav a {
     font-weight: bold;
 
     color: white;
-    background: #e44d26;
+    background: #e1e1e1;
 }
 
 nav a:hover,
@@ -159,13 +159,19 @@ body.full-height {
 }
 
 .full-height > .header-container {
-    height: 76px;
+    border-bottom-width: 10px;
+    height: 58px;
     position: relative;
     z-index: 1;
 }
 
+.full-height .header-container .title {
+    font-size: 1.5rem;
+    color: #222;
+}
+
 .full-height > .main-container {
-    height: calc(100vh - 218px);
+    height: calc(100vh - 179px);
     overflow-y: scroll;
 }
 
@@ -184,10 +190,11 @@ body.full-height {
     -moz-box-shadow: 0 5px 10px #aaa;
     box-shadow: 0 5px 10px #aaa;
     text-align: left;
-    margin: 0 auto;
+    margin: 0 auto 20px;
 }
 
 .full-height > .footer-container {
+    border-top-width: 10px;
     height: 102px;
     text-align: center;
 }
@@ -198,11 +205,15 @@ body.full-height {
 }
 
 .full-height .footer-container textarea {
-    width: 100%;
+    width: calc(100% - 70px);
     max-width: 800px;
     resize: none;
     height: 85px;
     margin-bottom: 7px;
+}
+
+.full-height .footer-container input[type=submit] {
+    vertical-align: top;
 }
 
 /* ==========================================================================
