--- a/static/css/main.css
+++ b/static/css/main.css
@@ -159,6 +159,9 @@ body.full-height {
 }
 
 .full-height > .header-container {
+    -webkit-box-shadow: 0 5px 10px rgba(170, 170, 170, 0.70);
+    -moz-box-shadow: 0 5px 10px rgba(170, 170, 170, 0.70);
+    box-shadow: 0 5px 10px rgba(170, 170, 170, 0.70);
     border-bottom-width: 10px;
     height: 58px;
     position: relative;
@@ -186,14 +189,17 @@ body.full-height {
     padding: 10px 5%;
     max-width: 500px;
     width: 100%;
-    -webkit-box-shadow: 0 5px 10px #aaa;
-    -moz-box-shadow: 0 5px 10px #aaa;
-    box-shadow: 0 5px 10px #aaa;
+    -webkit-box-shadow: 0 5px 10px rgba(170, 170, 170, 0.70);
+    -moz-box-shadow: 0 5px 10px rgba(170, 170, 170, 0.70);
+    box-shadow: 0 5px 10px rgba(170, 170, 170, 0.70);
     text-align: left;
     margin: 0 auto 20px;
 }
 
 .full-height > .footer-container {
+    -webkit-box-shadow: 0 -5px 10px rgba(170, 170, 170, 0.70);
+    -moz-box-shadow: 0 -5px 10px rgba(170, 170, 170, 0.70);
+    box-shadow: 0 -5px 10px rgba(170, 170, 170, 0.70);
     border-top-width: 10px;
     height: 102px;
     text-align: center;
