--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,6 +86,7 @@ body {
 
 .title {
     color: white;
+    margin: 5px 0;
 }
 
 /* ==============
@@ -98,7 +99,7 @@ nav ul {
     list-style-type: none;
 }
 
-nav a {
+nav a, nav a:visited {
     display: block;
     margin-bottom: 10px;
     padding: 15px 0;
@@ -107,17 +108,16 @@ nav a {
     text-decoration: none;
     font-weight: bold;
 
-    color: white;
+    color: #222;
     background: #e1e1e1;
 }
 
-nav a:hover,
-nav a:visited {
-    color: white;
+nav a:hover {
+    color: #444;
 }
 
 nav a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 /* ==============
@@ -170,7 +170,7 @@ body.full-height {
 
 .full-height .header-container .title {
     font-size: 1.5rem;
-    color: #222;
+    margin: 16px 0;
 }
 
 .full-height > .main-container {
