--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Slam eNotes - Share notes with classmates</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="static/images/apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
 
-        <link rel="stylesheet" href="static/css/normalize.min.css">
-        <link rel="stylesheet" href="static/css/main.css">
+        <link rel="stylesheet" href="{% static 'css/normalize.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}?1476760606">
 
-        <script src="static/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -23,13 +23,13 @@
         
         <div class="header-container">
             <header class="wrapper clearfix">
-
-                <p><img src="static/images/Slam%20eNotes%20Logo.png" alt="Slam eNotes Logo"  height="450" width="325"> </p>
+                <h1>
+                    <img src="{% static 'images/logo-alternate.png' %}" alt="Slam eNotes"  height="65">
+                </h1>
 
                 <nav>
                     <ul>
-                        <li><a href="/note-test">Submit a note</a></li>
-
+                        <li><a href="{% url 'note-test' %}">Take Notes</a></li>
                     </ul>
                 </nav>
             </header>
@@ -40,30 +40,31 @@
 
                 <article>
                     <header>
-                        
-                        
-                        <h1>User Story - what Slam eNotes can do for you</h1>
-                        <p>As a student, I want to archive notes taken in class and share them with my classmates, so that no one misses important information</p>
+                        <h2>Share notes easily with classmates</h2>
+                        <p>A note-sharing app built for you. With Slam eNotes, it's easy to take lecture notes and share them with your classmates.</p>
                     </header>
                     <section>
-                        <h2>About Slam eNotes - what it is</h2>
-                        <p> We propose creating a web application that allows users to create a channel with which to compile and share their notes for a particular class/lecture. Users will create accounts and submit a class schedule, from which they will be able to either search for lectures to join, or create their own lecture channel. Within the lecture channels users can post notes from a particular day's lecture, which will be indexed by the date/section. Users can also comment on and rate the contributions of other users within the channel to find the most relevant notes. There will also be a channel wide live chat allowing users to communicate in real time. User creations will be indexed based on their tags allowing users to search the channel for a particular subject/topic</p>
+                        <h2>When can I start using Slam eNotes?</h2>
+                        <p>We're preparing for a general release soon, stay tuned!</p>
                     </section>
-                    <section>
-                        <h2>About Us</h2>
-                        <p>Rawr...</p>
-                    </section>
-
                 </article>
-
-
+                <aside>
+                    <h3>About Us</h3>
+                    <p>Hi, we're Team Arctic. <a href="https://github.com/CS3398-Arctic/CS3398-Arctic-F2016/">Follow development on GitHub!</a></p>
+                </aside>
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="static/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+        <div class="footer-container">
+            <footer class="wrapper">
+                <p>&copy; Team Arctic 2016</p>
+            </footer>
+        </div>
 
-        <script src="static/js/main.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"><\/script>')</script>
+
+        <script src="{% static 'js/main.js' %}"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
