--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Note Test - Slam e-Notes</title>
+        <title>Note Test - Slam eNotes</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
@@ -24,7 +24,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Slam e-Notes</h1>
+                <h1 class="title">Slam eNotes</h1>
             </header>
         </div>
 
