making a few css changes to beautify homepage and adding 2nd alt logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1>
+                <h1 class="title">
                     <img src="{% static 'images/logo-alternate.png' %}" alt="Slam eNotes"  height="65">
                 </h1>
 
