--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,7 +85,7 @@ body {
 }
 
 .title {
-    color: white;
+    color: #222;
     margin: 5px 0;
 }
 
@@ -126,6 +126,7 @@ nav a:hover {
 
 .main {
     padding: 30px 0;
+    min-height: calc(100vh - 300px);
 }
 
 .main article h1 {
@@ -133,12 +134,12 @@ nav a:hover {
 }
 
 .main aside {
-    color: white;
+    color: #222;
     padding: 0 5% 10px;
 }
 
 .footer-container footer {
-    color: white;
+    color: #222;
     padding: 20px 0;
 }
 
@@ -179,6 +180,7 @@ body.full-height {
 }
 
 .full-height .main {
+    min-height: inherit;
 }
 
 .full-height article.note {
