adding logo to note-test page, added a couple navigation links

--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -24,7 +24,9 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Slam eNotes</h1>
+                <h1 class="title">
+                    <a href="{% url 'index' %}"><img src="{% static 'images/logo-short.png' %}" alt="Slam eNotes" /></a>
+                </h1>
             </header>
         </div>
 
