--- a/templates/index.html
+++ b/templates/index.html
@@ -38,15 +38,14 @@
 
         <div class="main-container">
             <div class="main wrapper clearfix">
-
                 <article>
                     <header>
-                        <h1>Share notes easily with classmates</h1>
-                        <p>A note-sharing app built for you. With Slam eNotes, it's easy to take lecture notes and share them with your classmates.</p>
+                        <h1>A note-sharing app built for you</h1>
+                        <p>Slam eNotes is built by students, for students. With Slam eNotes, it's easy to share digital lecture notes with your classmates.</p>
                     </header>
                     <section>
-                        <h2>When can I start using Slam eNotes?</h2>
-                        <p>We're preparing for a general release soon, stay tuned!</p>
+                        <h2>Slam eNotes release</h2>
+                        <p>Can't wait to get started? We're preparing for a general release soon, stay tuned!</p>
                     </section>
                 </article>
                 <aside>
