--- a/templates/note_test.html
+++ b/templates/note_test.html
@@ -25,7 +25,7 @@
         <div class="header-container">
             <header class="wrapper clearfix">
                 <h1 class="title">
-                    <a href="{% url 'index' %}"><img src="{% static 'images/logo-short.png' %}" alt="Slam eNotes" /></a>
+                    <a href="{% url 'index' %}"><img src="{% static 'images/logo-short.png' %}" alt="Slam eNotes" height="50" /></a>
                 </h1>
             </header>
         </div>
