modifying some header text on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                         <p>Slam eNotes is built by students, for students. With Slam eNotes, it's easy to share digital lecture notes with your classmates.</p>
                     </header>
                     <section>
-                        <h2>Slam eNotes release</h2>
+                        <h2>Start using Slam eNotes</h2>
                         <p>Can't wait to get started? We're preparing for a general release soon, stay tuned!</p>
                     </section>
                 </article>
