Added a list of planned features to homepage.

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,16 @@
                         <h2>Start using Slam eNotes</h2>
                         <p>Can't wait to get started? We're preparing for a general release soon, stay tuned!</p>
                     </section>
+                    <section>
+                        <h2>Planned Features</h2>
+                        <ul>
+                            <li>Create a user account.</li>
+                            <li>Create channels for your classes.</li>
+                            <li>Sort notes by class session.</li>
+                            <li>Search through notes.</li>
+                            <li>Upload handwritten notes.</li>
+                        </ul>
+                    </section>
                 </article>
                 <aside>
                     <h3>About Us</h3>
