Added a user model, a user_test view, a user-test url, and a cloned github registration template. Deleted some irrelevant commented out code.

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,4 +9,4 @@
     <p><img src="static/images/Slam%20eNotes%20Logo.png" alt="Slam eNotes Logo"  height="450" width="325"> </p>
 
 </body>
-</html>
+</html>>
