--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,16 +31,18 @@
             </header>
         </div>
 
+{% block content %}
+<form method="post" action=".">
+  {% csrf_token %}
+  {{ form.as_p }}
 
-            {% block content %}
-            <form method="post" action=".">
-                {% csrf_token %}
-                {{ form.as_p }}
+  <input type="submit" value="{% trans 'Log in' %}" />
+  <input type="hidden" name="next" value="{{ next }}" />
+</form>
 
-                <input type="submit" value="{% trans 'Log in' %}" />
-                <input type="hidden" name="next" value="{{ next }}" />
-            </form>
-            {% endblock %}
+<p>{% trans "Forgot password" %}? <a href="{% url '' %}">{% trans "Reset it" %}</a>!</p>
+<p>{% trans "Not member" %}? <a href="{% url '' %}">{% trans "Register" %}</a>!</p>
+{% endblock %}
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
