--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -40,8 +40,8 @@
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-<p>{% trans "Forgot password" %}? <a href="{% url '' %}">{% trans "Reset it" %}</a>!</p>
-<p>{% trans "Not member" %}? <a href="{% url '' %}">{% trans "Register" %}</a>!</p>
+<p>{% trans "Forgot password" %}? {% trans "Reset it" %}</a>!</p>
+<p>{% trans "Not member" %}? {% trans "Register" %}</a>!</p>
 {% endblock %}
 
 
