Configuring Account Creation

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -221,6 +221,10 @@ body.full-height {
     vertical-align: top;
 }
 
+form#create-account-form {
+    margin: 100px auto 0;
+    width: 200px;
+}
 /* ==========================================================================
    Media Queries
    ========================================================================== */
