--- a/templates/channel.html
+++ b/templates/channel.html
@@ -40,6 +40,19 @@
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
+        <aside class="sidebar-container">
+            <div class="courses">
+                <h2>CS 3398.002 - Softwa...</h2>
+                <div class="courses-other">
+                    <h2 class="courses-add">Add new class</h2>
+                </div>
+            </div>
+            <h3 class="class-title">CLASS SESSIONS</h3>
+            <div class="session-list">
+                <h3 class="viewing">All Sessions</h3>
+            </div>
+        </aside>
+
         <div class="footer-container">
             <footer class="wrapper">
                 {% if user.is_authenticated %}
