--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="{% url 'note-test' %}">Take Notes</a></li>
+                        <li><a href="{% url 'channel' %}">Take Notes</a></li>
                     </ul>
                 </nav>
             </header>
