--- a/static/css/main.css
+++ b/static/css/main.css
@@ -226,6 +226,11 @@ form#create-account-form {
     width: 200px;
 }
 
+form#login-form {
+    margin: 100px auto 0;
+    width: 200px;
+}
+
 /* ==========================================================================
 
    ========================================================================== */
