--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
                 <aside>
                     {% if user.is_authenticated %}
                     <p>
-                        Signed in as {{ user.username }}.
+                        Welcome, {{ user.email }}.
                     </p>
                     {% else %}
                         {% if account_created %}
@@ -73,8 +73,18 @@
                         {% endif %}
                     <form id="login-form" method="post">
                         <h3>Log In</h3>
+                        {% if invalid_login %}
+                        <p>
+                            Invalid email/password combination entered.
+                        </p>
+                        {% endif %}
                         {% csrf_token %}
-                        {{ form_login.as_p }}
+                        <p>
+                            {{ form_login.email }}
+                        </p>
+                        <p>
+                            {{ form_login.password }}
+                        </p>
                         <input type="submit" name="login-form" value="Log in" />
                     </form>
                     <form id="signup-form" method="post">
